can use -DnoDocker=true -DnoConsu=true -DnoProtobuf=true to skip some modules

--- a/dubbo-configcenter/dubbo-configcenter-etcd/pom.xml
+++ b/dubbo-configcenter/dubbo-configcenter-etcd/pom.xml
@@ -32,6 +32,30 @@
     <name>${project.artifactId}</name>
     <description>The etcd implementation of the config-center api</description>
 
+    <profiles>
+        <profile>
+            <id>no_dubbo-configcenter-etcd_test</id>
+            <activation>
+                <property>
+                    <name>noDocker</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven_surefire_version}</version>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>io.etcd</groupId>
