--- a/dubbo-remoting/dubbo-remoting-etcd3/pom.xml
+++ b/dubbo-remoting/dubbo-remoting-etcd3/pom.xml
@@ -34,6 +34,29 @@
         <skip_maven_deploy>false</skip_maven_deploy>
         <assertj.version>3.13.2</assertj.version>
     </properties>
+    <profiles>
+        <profile>
+            <id>no_dubbo-remoting-etcd3_test</id>
+            <activation>
+                <property>
+                    <name>noDocker</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven_surefire_version}</version>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <dependencies>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
