--- a/dubbo-remoting/dubbo-remoting-etcd3/pom.xml
+++ b/dubbo-remoting/dubbo-remoting-etcd3/pom.xml
@@ -33,6 +33,7 @@
     <properties>
         <skip_maven_deploy>false</skip_maven_deploy>
         <assertj.version>3.13.2</assertj.version>
+        <skip_integration_test>true</skip_integration_test>
     </properties>
     <profiles>
         <profile>
@@ -111,6 +112,19 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven_surefire_version}</version>
+                <configuration>
+                    <skipTests>${skip_integration_test}</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
