--- a/dubbo-demo/pom.xml
+++ b/dubbo-demo/pom.xml
@@ -35,6 +35,7 @@
         <module>dubbo-demo-xml</module>
         <module>dubbo-demo-annotation</module>
         <module>dubbo-demo-api</module>
+        <module>dubbo-check</module>
         <!--        <module>dubbo-demo-servicediscovery-xml</module>-->
         <!--        <module>servicediscovery-transfer</module>-->
         <!--        <module>dubbo-call-sc</module>-->
