--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
         <arguments />
         <checkstyle.skip>true</checkstyle.skip>
         <rat.skip>true</rat.skip>
-        <revision>2.7.7-qlj-SNAPSHOT</revision>
+        <revision>2.7.7-SNAPSHOT</revision>
     </properties>
 
     <modules>
