--- a/dubbo-config/dubbo-config-spring/src/test/resources/org/apache/dubbo/config/spring/issues/i6036/application.properties
+++ b/dubbo-config/dubbo-config-spring/src/test/resources/org/apache/dubbo/config/spring/issues/i6036/application.properties
@@ -5,9 +5,9 @@ dubbo.application.name=demo
 #dubbo.config.multiple=true
 
 dubbo.registries.registry1.id=registry1
-dubbo.registries.registry1.address=zookeeper://localhost:2181
+dubbo.registries.registry1.address=zookeeper://127.0.0.1:2181
 dubbo.registries.registry1.file=/Users/test/dubbo/registry/registry1
 
 # this config is not working
-dubbo.demo.registry=zookeeper://localhost:2181
+dubbo.demo.registry=zookeeper://127.0.0.1:2181
 dubbo.registry.file.path=/Users/test/dubbo/registry/registry2
