add dependencies to compatible module

--- a/dubbo-distribution/pom.xml
+++ b/dubbo-distribution/pom.xml
@@ -47,6 +47,9 @@
         </profile>
         <profile>
             <id>dubbo-all</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <modules>
                 <module>dubbo-all</module>
             </modules>
