--- a/dubbo-cluster/pom.xml
+++ b/dubbo-cluster/pom.xml
@@ -39,6 +39,11 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jexl3</artifactId>
+            <version>3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.curator</groupId>
