--- a/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/service-introspection/zookeeper-dubbb-consumer.properties
+++ b/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/service-introspection/zookeeper-dubbb-consumer.properties
@@ -10,3 +10,5 @@ dubbo.protocol.name = dubbo
 dubbo.protocol.port = -1
 
 dubbo.provider.name = zookeeper-dubbo-spring-provider
+dubbo.provider.name1 = zookeeper-dubbo-spring-provider-1
+dubbo.provider.name2 = zookeeper-dubbo-spring-provider-2
